--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,7 +7,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/answer run -C __DATA_DIR__/conf/config.yaml
+ExecStart=__INSTALL_DIR__/answer run -C __DATA_DIR__/conf/
 
 ### Depending on specificities of your service/app, you may need to tweak these
 ### .. but this should be a good baseline
