--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -6,6 +6,7 @@ After=network.target
 Type=simple
 User=__APP__
 Group=__APP__
+EnvironmentFile=__INSTALL_DIR__/.env
 WorkingDirectory=__INSTALL_DIR__/
 ExecStart=__INSTALL_DIR__/answer run -C __DATA_DIR__/
 
