--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,7 +8,7 @@ User=__APP__
 Group=__APP__
 EnvironmentFile=__INSTALL_DIR__/.env
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/answer run -C __DATA_DIR__/
+ExecStart=__INSTALL_DIR__/answer run --data-path __DATA_DIR__/
 
 ### Depending on specificities of your service/app, you may need to tweak these
 ### .. but this should be a good baseline
